update - temporaily back to minima

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,11 @@
 		"dockerfile": "../DockerFile"
 	},
 
+	"containerEnv": {
+		"LC_ALL": "en_US.UTF-8",
+		"LANG": "en_US.UTF-8",
+		"LANGUAGE": "en_US.UTF-8"
+	},	
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
