--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,9 @@ github_username:  peted70
 
 # Build settings
 markdown: kramdown
-#theme: minima
-remote_theme: pages-themes/cayman@v0.2.0
+theme: minima
+#remote_theme: pages-themes/cayman@v0.2.0
+#theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
   - jekyll-remote-theme 
