--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ github_username:  peted70
 markdown: kramdown
 #theme: minima
 #remote_theme: pages-themes/cayman@v0.2.0
-theme: minimal-mistakes-jekyll
+#theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
