--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://petexr.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.petexr.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: peted70
 github_username:  peted70
 
@@ -77,6 +77,7 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       author_profile: true
       read_time: true
       comments: true
