--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://www.petexr.com"
+      url: "https://petexr.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
