--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon
 
 author:
   name  : "Pete D"
-  avatar  : "assets/images/avatar.png"
+  avatar  : "assets/images/profile.png"
   bio : "Building for Spatial Computing..."
   location  : "London, UK"
   email: "peted70@hotmail.com"
