added sitemap generation

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ plugins:
   - jekyll-remote-theme
   - jekyll-include-cache 
   - jekyll-archives
+  - jekyll-sitemap
 
 category_archive:
   type: liquid
