--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,12 @@
 title: 
 email: peted70@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+Explore the world of Spatial Computing, Metaverse Technology, and more with Pete D's Blog. 
+Gain insights into the latest developments in the field, discover innovative ideas, and stay up-to-date 
+with the future of technology. Pete D shares his thoughts and experiences on topics like immersive hardware 
+(HoloLens 2 and Magic Leap 2), the cloud (AWS), game engine technology (Unreal Engine and Unity), 
+3D content creation tools (Blender) and much more. 
+Join us on this exciting journey through the realms of Mixed Reality and Spatial Computing.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.petexr.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: peted70
